Increase letter-spacing in CTA button. Fixes #121

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -2798,6 +2798,7 @@ table {
     padding-left: 0;
 		span {
 			line-height: 120%;
+			letter-spacing: 1px;
 		}
     a {
       display: block;
